# lab-orchestrator

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/versions/: 001_initial_schema.py
src/lab_orchestrator/: db.py  dead_letter.py  deduplication.py  health.py  logging.py  metrics.py  middleware.py  models.py  retry.py  schema.py
src/lab_orchestrator/ui/static/: custom.css
src/lab_orchestrator/ui/templates/: PLUGIN_TEMPLATE_GUIDE.md  base.html  devices.html  index.html  ndi.html  ndi_standard.html  plugin_base.html  plugin_shell.html  projector.html  projector_standard.html
