[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-orchestrator"
version = "0.1.0"
description = "Lab Platform Orchestrator - Central coordination service"
authors = [{name = "Farah Orfaly"}]
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "Jinja2==3.1.4",
    "paho-mqtt==1.6.1",
    "apscheduler==3.10.4",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    # Database
    "sqlalchemy==2.0.23",
    "alembic==1.13.0",
    "psycopg2-binary==2.9.9",
    # Metrics and monitoring
    "prometheus-client==0.19.0",
    "psutil==5.9.6",
    # Testing
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "docker==6.1.3",
]

[project.scripts]
lab-orchestrator = "lab_orchestrator.host:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
